--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "repository": {},
   "license": "UNLICENSED",
   "devDependencies": {
+    "@types/react": "^18.0.6",
+    "@types/web": "^0.0.61",
     "autoprefixer": "10.4.4",
     "css-loader": "^6.7.1",
     "postcss": "8.4.12",
@@ -21,9 +23,7 @@
     "postcss-preset-env": "7.4.3",
     "style-loader": "^3.3.1",
     "tailwindcss": "^3.1.6",
-    "webpack": "^5.72.0",
-    "@types/react": "^18.0.6",
-    "@types/web": "^0.0.61"
+    "webpack": "^5.72.0"
   },
   "dependencies": {
     "@remotion/cli": "3.2.31",
@@ -32,6 +32,7 @@
     "prettier": "^2.6.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.6.0",
     "remotion": "3.2.31",
     "typescript": "4.6.3"
   }
